@@ -196,6 +196,7 @@ extern	int		r_viewcluster, r_viewcluster2, r_oldviewcluster, r_oldviewcluster2;
 extern	cvar_t* r_norefresh;
 extern	cvar_t* r_lefthand;
 extern	cvar_t* r_drawentities;
+extern	cvar_t* r_highlightentities;
 extern	cvar_t* r_drawworld;
 extern	cvar_t* r_speeds;
 extern	cvar_t* r_fullbright;
@@ -228,7 +229,6 @@ extern	cvar_t* gl_round_down;
 extern	cvar_t* gl_picmip;
 extern	cvar_t* gl_skymip;
 extern	cvar_t* gl_showtris;
-extern	cvar_t* gl_finish;
 extern	cvar_t* gl_ztrick;
 extern	cvar_t* gl_clear;
 extern	cvar_t* gl_cull;
